# sse-angular-node-bazel-example

./: README.md  WORKSPACE  angular.json.bak  package.json
projects/client/src/: BUILD.bazel
projects/server/: BUILD.bazel
time-server/: BUILD.bazel
