package(default_visibility = ["//visibility:public"])

java_library(
    name = "time-server-lib",
    srcs = glob(["src/main/java/com/oasisdigital/myproject/*.java"]),
    deps = ["@maven//:com_sparkjava_spark_core"],
)

java_binary(
    name = "time-server",
    main_class = "com.oasisdigital.myproject.Server",
    runtime_deps = [":time-server-lib"],
)
