package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
  name = "app",
  srcs = glob(["src/**/*.ts"]),
  deps = [
    "@npm//@types/node",
    "@npm//tslib",
    "@npm//sse-channel",
    "@npm//express",
  ],
)

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

filegroup(
  name = "assets",
  srcs = glob(["www/**/*"]),
)

# bazel run //server:server
nodejs_binary(
  name = "server",
  data = [
    ":app",
    ":assets",
  ],
  entry_point = ":src/main.ts",
)

# For testing from the root workspace of this repository with bazel_integration_test.
filegroup(
  name = "all_files",
  srcs = glob(["**/*"]),
  visibility = ["//visibility:public"],
)
